# GameOfLife

./: CMakeLists.txt  README.md  area.hpp  gameoflife.hpp  graphics.hpp  main.cpp  object.hpp
